Fix v-app-bar covering up links to element id

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -11,6 +11,11 @@ main {
   padding: 2rem;
 }
 
+[id] {
+  /* Ensures the v-app-bar doesn't cover linked item. */
+  scroll-margin-top: 74px;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(216, 100%, 86%, 0.2);
